<resources>
    <string name="app_name">Profile Changer</string>
    <string name="location_profiler">Location  Profiler</string>
    <string name="location_base_profiler">Location base Profiler</string>
    <string name="time_base_profiler">Time base Profiler</string>
    <string name="rate">Rate</string>
    <string name="settings">Settings</string>
    <string name="Profiles">Profiles</string>

    //test ids
    <string name="banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial">ca-app-pub-3940256099942544/1033173712</string>
    //original
    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ringtone">Ringtone</string>
    <string name="media">Media</string>
    <string name="notification">Notification</string>
    <string name="system">System</string>
    <string name="set">Set</string>
    <string name="save">Save</string>
    <string name="un_titled">un_titled</string>
    <string name="ringing">Ringing</string>
    <string name="silent">Silent</string>
    <string name="vibrate">Vibrate</string>
    <string name="add_new">Add new</string>
    <string name="update">Update</string>
    <string name="general">General</string>
    <string name="loud">Loud</string>
    <string name="touch_sound">Touch Sound</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="dial_pad_sound">Dial Pad Sound</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="end_profiler">End profiler</string>
    <string name="start_profiler">Start profiler</string>
    <string name="repeat">Repeat</string>
    <string name="fri">Fri</string>
    <string name="thu">Thu</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="mon">Mon</string>
    <string name="sun">Sun</string>
    <string name="sat">Sat</string>
    <string name="cancel">Cancel</string>
    <string name="no_profiler">No Profiler</string>
    <string name="N_A">N/A</string>
    <string name="delete_message">Are you sure you want to delete ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all_days">All days</string>
    <string name="un_done">Un Done</string>
    <string name="notification_sounds">Notification Sounds</string>
    <string name="sound_name">sound name</string>
    <string name="theme">Theme</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="auto_change">Auto Change</string>
    <string name="marks_limit">Marks Limit</string>
    <string name="circle_size">Circle Size</string>
    <string name="walk">100x100 (m)</string>
    <string name="cycle">150x150 (m)</string>
    <string name="bus">250X250 (m)</string>
    <string name="car">300x300 (m)</string>
    <string name="dismiss">Dismiss</string>
    <string name="done">Done</string>
    <string name="on_exit">On Exit</string>
    <string name="on_entered">On Entered</string>
    <string name="geofence_type">Geofence type</string>
    <string name="enter">Enter</string>
    <string name="never">Never</string>
    <string name="location">Location</string>
    <string name="you_need_to_allow_location">you need to allow location.</string>
    <string name="Profiler_not_inserted">Profiler not inserted</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="pleas_enter_title">Please type title</string>
    <string name="no_internet_conection">No Internet connection</string>
    <string name="not_found">Not Found</string>
    <string name="place_name">Place name</string>
    <string name="permission">Permission</string>
    <string name="write_settings_alert_text">Without <b>manage settings permission</b> application main
        features do not work.</string>
    <string name="do_not_disturb_permission_text">Without <b>do not disturb</b> permission application main
        features do not work.</string>
    <string name="decline">Decline</string>
    <string name="allow">Allow</string>
    <string name="no_data">no data</string>
    <string name="select">Select</string>
    <string name="expiration_time">Expiration time:</string>
    <string name="expiration_duration">Expiration duration:</string>
    <string name="latitude">Latitude:</string>
    <string name="state">State</string>
    <string name="longitude">Longitude</string>
    <string name="are_you_sure_you_want_to_delete_the_selected_item">Are you sure you want to delete
        the selected item ?</string>
    <string name="time_base">Time Base</string>
    <string name="location_base">Location Base</string>
    <string name="help">Help</string>
    <string name="Info">Info</string>
    <string name="share">Share</string>
    <string name="more_apps">More Apps</string>
    <string name="rate_us">Rate Us</string>
    <string name="end_profile">End Profile</string>
    <string name="start_profile">Start Profile</string>
    <string name="profiler">Profiler</string>
    <string name="created_date">Created date</string>
    <string name="profile">Profile</string>
    <string name="thanks_for_installing_this_app">Thanks for installing this app.</string>
    <string name="info_about">By using this application you will able to silent, ringing, vibrate
        and can set profile volumes as well as touch, dial pad sound enable/disable of device.
        user can add new profiles and then select for location based profiler/time based profiler.
    if time based profiler is set then sound profile changes sounds of device when time alarm triggers.
    if location base profiler is set then sound profile change sound of device when user Enter/exit
        selected area on map.</string>
    <string name="exit_text">Are you sure you want to\n exit?</string>
    <string name="thanks_and_feedback">Thanks for using our app for further suggestion please give
        us your feedback send us email at(abc@gmail.com).</string>
    <string name="close">Close</string>
    <string name="thank_you_for_using_our_app">Thank you for using our app.</string>
    <string name="exit">Exit</string>
    <string name="automatically_manage_your_sound_profile">Automatically manage your sound profile</string>
    <string name="permission_texts">This application asks user to allow certain permissions that are
        required for the application to perform its actions properly.
        (Profile Changer) helps user to  silent, ringing,vibrate and can set profile volumes
        as well as touch, dial pad sound enable/disable of device.user can add new profiles and
        then select for location based profiler/time based profiler.if time based profiler is set
        then sound profile changes sounds of device when time alarm triggers.if location base
        profiler is set then sound profile changes sounds of device when user enter/exit
        selected area on map.We insure you that the user personal data or information is not
        collected by the company nor does the application host users data </string>
    <string name="permissions_explanation">1. Location permission needed to check if user is entered
        and exit or not.\n\n 2. Do Not Disturb permission is required to change ringing mode and
        enable do not disturb mode.\n\n 3. Manage System settings is required to enable/disable touch,
        dial pad and vibrate.</string>
    <string name="by_accepting">By accepting you are agree to our <u><b>Terms and Conditions</b></u></string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="ok">OK</string>
    <string name="use_your_location">Use your location</string>
    <string name="background_location_text1">To see maps for automatically tracked activities.\n
        allow Profile Changer to use your location all of the time.</string>
    <string name="background_location_text2">Profile Changer will use location  in background to detect the user entrance and exit to/from geofence circle.</string>
    <string name="no_thanks">No thanks</string>
    <string name="turn_on">Turn on</string>
    <string name="location_permission">Location permission</string>
    <string name="manage_settings">Manage settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="are_you_sure_you_want_to_back">Are you sure you want to back?</string>
    <string name="hr1">1hr</string>
    <string name="huawei_text">App must not be killed by device operation system if you want to use this.otherwise alarm will not be triggered.</string>

</resources>