<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="150dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:background="?attr/blueWhite"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ringing_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/ringing"
            android:textColor="?attr/textWhiteGray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/textWhiteGray" />

        <TextView
            android:id="@+id/silent_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/silent"
            android:textColor="?attr/textWhiteGray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/textWhiteGray" />

        <TextView
            android:id="@+id/vibrate_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/vibrate"
            android:textColor="?attr/textWhiteGray" />
    </LinearLayout>

</androidx.cardview.widget.CardView>